--- a/site/docs/getting-started/installation.mdx
+++ b/site/docs/getting-started/installation.mdx
@@ -188,10 +188,12 @@ import BrowserOnly from "@docusaurus/BrowserOnly";
 
    For more help, see the [Azure docs](https://learn.microsoft.com/en-us/azure/role-based-access-control/role-assignments-portal).
 
-### Give us a ring
+### Add the Bucket
 
-Once you've finished the above steps, contact us.
-Send support@estuary.dev an email with the name of the storage bucket and any other information you gathered per the steps above.
+If your bucket is for Google Cloud Storage or AWS S3, you can add it yourself.  Once you've finished the above steps, head to "Admin", "Settings" then "Configure Cloud Storage" 
+and enter the relevant information there and we'll start to use your bucket for all data going forward.
+
+If your bucket is for Azure, send support@estuary.dev an email with the name of the storage bucket and any other information you gathered per the steps above.
 Let us know whether you want to use this storage bucket to for your whole Flow account, or just a specific [prefix](../concepts/catalogs.md#namespace).
 We'll be in touch when it's done!
 
