Bring back the cloud storage config docs to its original position

--- a/site/docs/getting-started/installation.mdx
+++ b/site/docs/getting-started/installation.mdx
@@ -1,4 +1,17 @@
-# Configuring your cloud storage bucket for use with Flow
+---
+title: Configure Cloud Storage
+description: Learn how to configure Flow to use your cloud storage
+slug: installation
+sidebar_position: 5
+---
+
+{/*
+Do not move this file as it contains the Azure auth snippet, which is configured to
+redirect to the path /getting-started/installation
+*/}
+
+
+# Configuring Cloud Storage for Flow
 
 New Flow accounts are connected to Flow's secure cloud storage bucket to store collection data.
 To switch to your own bucket, choose a cloud provider and complete the setup steps:
