Update storage mapping instructions
Add mention of multiple storage mappings for different prefixes

--- a/site/docs/getting-started/installation.mdx
+++ b/site/docs/getting-started/installation.mdx
@@ -190,12 +190,12 @@ import BrowserOnly from "@docusaurus/BrowserOnly";
 
 ## Add the Bucket
 
-If your bucket is for Google Cloud Storage or AWS S3, you can add it yourself. Once you've finished the above steps,
+If you are setting up a single bucket for Google Cloud Storage or AWS S3, you can add it yourself. Once you've finished the above steps,
 head to "Admin", "Settings" then "Configure Cloud Storage"
 and enter the relevant information there and we'll start to use your bucket for all data going forward.
 
-If your bucket is for Azure, send support@estuary.dev an email with the name of the storage bucket and any other
-information you gathered per the steps above.
+If your bucket is for Azure, or you'd like to configure more than one storage mapping a single tenant tenant (each applying to a different prefix, 
+send support@estuary.dev an email with the name of the storage bucket and any other information you gathered per the steps above.
 Let us know whether you want to use this storage bucket to for your whole Flow account, or just a
 specific [prefix](../concepts/catalogs.md#namespace).
 We'll be in touch when it's done!
